# private-assistant-with-rag

./: .gitignore  README.md  pyproject.toml
app/: embedder.py  main.py  rag.py
app/chroma/: chroma.sqlite3
