[project]
name = "rag-ai-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "kjh",email = "conkjh0321@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.115.9,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pdfminer-six (>=20250416,<20250417)",
    "langchain (>=0.3.25,<0.4.0)",
    "chromadb (>=0.6.3,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "langchain-huggingface (>=0.2.0,<0.3.0)",
    "langchain-chroma (>=0.2.3,<0.3.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
